src/parser/parser.output
   0  $accept : %entry% $end

   1  program : imports PROGRAM IDENTIFIER BEGIN program_body END EOF
   2          | imports MODULE IDENTIFIER program_body END MODULE EOF
   3          | imports MODULE IDENTIFIER program_body END EOF

   4  imports :
   5          | imports import_spec

   6  import_spec : IMPORT IDENTIFIER
   7              | IMPORT IDENTIFIER AS IDENTIFIER
   8              | IMPORT IDENTIFIER FROM IDENTIFIER
   9              | IMPORT LPAREN IDENTIFIER_LIST RPAREN FROM IDENTIFIER

  10  IDENTIFIER_LIST : IDENTIFIER
  11                  | IDENTIFIER_LIST COMMA IDENTIFIER

  12  program_body :
  13               | program_body declaration
  14               | program_body stmt

  15  declaration : function_def
  16              | class_def
  17              | contract_def
  18              | module_def

  19  function_def : DEFINE FUNCTION IDENTIFIER LPAREN params RPAREN return_type BEGIN stmt_list END
  20               | DEFINE ASYNC FUNCTION IDENTIFIER LPAREN params RPAREN return_type BEGIN stmt_list END

  21  params :
  22         | param_list

  23  param_list : param
  24             | param_list COMMA param

  25  param : IDENTIFIER COLON type_expr ASSIGN expr
  26        | IDENTIFIER COLON type_expr
  27        | IDENTIFIER ASSIGN expr
  28        | IDENTIFIER

  29  return_type :
  30              | COLON type_expr

  31  stmt_list :
  32            | stmt_list stmt

  33  stmt : expr_stmt
  34       | var_decl
  35       | const_decl
  36       | assign_stmt
  37       | if_stmt
  38       | while_stmt
  39       | for_stmt
  40       | function_def
  41       | return_stmt
  42       | break_stmt
  43       | continue_stmt
  44       | try_stmt
  45       | throw_stmt
  46       | import_stmt
  47       | export_stmt

  48  terminator : SEMICOLON
  49             |

  50  expr_stmt : expr terminator

  51  var_decl : VAR IDENTIFIER COLON type_expr ASSIGN expr terminator
  52           | VAR IDENTIFIER COLON type_expr terminator
  53           | VAR IDENTIFIER ASSIGN expr terminator
  54           | VAR IDENTIFIER terminator

  55  const_decl : CONST IDENTIFIER COLON type_expr ASSIGN expr terminator
  56             | CONST IDENTIFIER ASSIGN expr terminator

  57  assign_stmt : IDENTIFIER ASSIGN expr terminator
  58              | IDENTIFIER PLUSASSIGN expr terminator
  59              | IDENTIFIER MINUSASSIGN expr terminator
  60              | IDENTIFIER MULTIPLYASSIGN expr terminator
  61              | IDENTIFIER DIVIDEASSIGN expr terminator

  62  if_stmt : IF expr THEN stmt_list END IF
  63          | IF expr THEN stmt_list ELSE stmt_list END IF
  64          | IF expr THEN stmt_list elif_list END IF

  65  elif_list : ELIF expr THEN stmt_list
  66            | ELIF expr THEN stmt_list ELSE stmt_list
  67            | ELIF expr THEN stmt_list elif_list

  68  while_stmt : WHILE expr DO stmt_list END WHILE

  69  for_stmt : FOR EACH IDENTIFIER IN expr DO stmt_list END FOR
  70           | FOR IDENTIFIER IN expr DO stmt_list END FOR

  71  return_stmt : RETURN expr terminator
  72              | RETURN terminator

  73  break_stmt : BREAK terminator

  74  continue_stmt : CONTINUE terminator

  75  try_stmt : TRY stmt_list catch_list finally END TRY

  76  catch_list :
  77             | CATCH IDENTIFIER stmt_list
  78             | CATCH IDENTIFIER stmt_list catch_list

  79  finally :
  80          | FINALLY stmt_list

  81  throw_stmt : THROW expr terminator

  82  import_stmt : import_spec

  83  export_stmt : EXPORT IDENTIFIER terminator
  84              | EXPORT FUNCTION IDENTIFIER terminator
  85              | EXPORT ALL terminator

  86  expr : literal
  87       | IDENTIFIER
  88       | expr PLUS expr
  89       | expr MINUS expr
  90       | expr MULTIPLY expr
  91       | expr DIVIDE expr
  92       | expr MODULO expr
  93       | expr POWER expr
  94       | expr EQUAL expr
  95       | expr NOTEQUAL expr
  96       | expr LESS expr
  97       | expr GREATER expr
  98       | expr LESSEQUAL expr
  99       | expr GREATEREQUAL expr
 100       | expr AND expr
 101       | expr OR expr
 102       | NOT expr
 103       | MINUS expr
 104       | LPAREN expr RPAREN
 105       | IDENTIFIER LPAREN expr_list RPAREN
 106       | expr DOT IDENTIFIER
 107       | expr LBRACKET expr RBRACKET
 108       | LBRACKET expr_list RBRACKET
 109       | LBRACE map_list RBRACE
 110       | LPAREN expr_list RPAREN
 111       | IF expr THEN expr ELSE expr

 112  expr_list :
 113            | expr
 114            | expr_list COMMA expr

 115  map_list :
 116           | map_pair
 117           | map_list COMMA map_pair

 118  map_pair : expr COLON expr

 119  literal : INTEGER
 120          | FLOAT
 121          | STRING
 122          | TRUE
 123          | FALSE
 124          | NULL

 125  type_expr : IDENTIFIER
 126            | INTEGER
 127            | FLOAT
 128            | STRING
 129            | BOOLEAN
 130            | NULL
 131            | LIST LESS type_expr GREATER
 132            | MAP LESS type_expr COMMA type_expr GREATER
 133            | SET LESS type_expr GREATER
 134            | TUPLE LESS type_expr_list GREATER
 135            | FUNCTION LESS type_expr_list GREATER
 136            | type_expr QUESTION

 137  type_expr_list : type_expr
 138                 | type_expr_list COMMA type_expr

 139  class_def : DEFINE CLASS IDENTIFIER BEGIN class_body END
 140            | DEFINE CLASS IDENTIFIER EXTENDS IDENTIFIER BEGIN class_body END

 141  class_body :
 142             | class_body method_def
 143             | class_body field_def

 144  method_def : DEFINE METHOD IDENTIFIER LPAREN params RPAREN return_type BEGIN stmt_list END

 145  field_def : VAR IDENTIFIER COLON type_expr terminator
 146            | VAR IDENTIFIER COLON type_expr ASSIGN expr terminator

 147  contract_def : DEFINE CONTRACT IDENTIFIER BEGIN contract_body END

 148  contract_body :
 149                | contract_body method_def
 150                | contract_body event_def

 151  event_def : EVENT IDENTIFIER LPAREN params RPAREN terminator

 152  module_def : DEFINE MODULE IDENTIFIER BEGIN module_body END

 153  module_body :
 154              | module_body declaration

 155  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (155)
	imports : .  (4)

	.  reduce 4

	program  goto 3
	imports  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (155)

	.  reduce 155


state 4
	program : imports . PROGRAM IDENTIFIER BEGIN program_body END EOF  (1)
	program : imports . MODULE IDENTIFIER program_body END MODULE EOF  (2)
	program : imports . MODULE IDENTIFIER program_body END EOF  (3)
	imports : imports . import_spec  (5)

	PROGRAM  shift 5
	MODULE  shift 6
	IMPORT  shift 7
	.  error

	import_spec  goto 8


state 5
	program : imports PROGRAM . IDENTIFIER BEGIN program_body END EOF  (1)

	IDENTIFIER  shift 9
	.  error


state 6
	program : imports MODULE . IDENTIFIER program_body END MODULE EOF  (2)
	program : imports MODULE . IDENTIFIER program_body END EOF  (3)

	IDENTIFIER  shift 10
	.  error


state 7
	import_spec : IMPORT . IDENTIFIER  (6)
	import_spec : IMPORT . IDENTIFIER AS IDENTIFIER  (7)
	import_spec : IMPORT . IDENTIFIER FROM IDENTIFIER  (8)
	import_spec : IMPORT . LPAREN IDENTIFIER_LIST RPAREN FROM IDENTIFIER  (9)

	IDENTIFIER  shift 11
	LPAREN  shift 12
	.  error


state 8
	imports : imports import_spec .  (5)

	.  reduce 5


state 9
	program : imports PROGRAM IDENTIFIER . BEGIN program_body END EOF  (1)

	BEGIN  shift 13
	.  error


state 10
	program : imports MODULE IDENTIFIER . program_body END MODULE EOF  (2)
	program : imports MODULE IDENTIFIER . program_body END EOF  (3)
	program_body : .  (12)

	.  reduce 12

	program_body  goto 14


state 11
	import_spec : IMPORT IDENTIFIER .  (6)
	import_spec : IMPORT IDENTIFIER . AS IDENTIFIER  (7)
	import_spec : IMPORT IDENTIFIER . FROM IDENTIFIER  (8)

	AS  shift 15
	FROM  shift 16
	IDENTIFIER  reduce 6
	INTEGER  reduce 6
	FLOAT  reduce 6
	STRING  reduce 6
	PROGRAM  reduce 6
	END  reduce 6
	VAR  reduce 6
	CONST  reduce 6
	IF  reduce 6
	ELSE  reduce 6
	ELIF  reduce 6
	WHILE  reduce 6
	FOR  reduce 6
	DEFINE  reduce 6
	MODULE  reduce 6
	IMPORT  reduce 6
	EXPORT  reduce 6
	RETURN  reduce 6
	BREAK  reduce 6
	CONTINUE  reduce 6
	TRY  reduce 6
	CATCH  reduce 6
	FINALLY  reduce 6
	THROW  reduce 6
	TRUE  reduce 6
	FALSE  reduce 6
	NULL  reduce 6
	NOT  reduce 6
	MINUS  reduce 6
	LPAREN  reduce 6
	LBRACE  reduce 6
	LBRACKET  reduce 6


state 12
	import_spec : IMPORT LPAREN . IDENTIFIER_LIST RPAREN FROM IDENTIFIER  (9)

	IDENTIFIER  shift 17
	.  error

	IDENTIFIER_LIST  goto 18


state 13
	program : imports PROGRAM IDENTIFIER BEGIN . program_body END EOF  (1)
	program_body : .  (12)

	.  reduce 12

	program_body  goto 19


state 14
	program : imports MODULE IDENTIFIER program_body . END MODULE EOF  (2)
	program : imports MODULE IDENTIFIER program_body . END EOF  (3)
	program_body : program_body . declaration  (13)
	program_body : program_body . stmt  (14)

	IDENTIFIER  shift 20
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	END  shift 24
	VAR  shift 25
	CONST  shift 26
	IF  shift 27
	WHILE  shift 28
	FOR  shift 29
	DEFINE  shift 30
	IMPORT  shift 7
	EXPORT  shift 31
	RETURN  shift 32
	BREAK  shift 33
	CONTINUE  shift 34
	TRY  shift 35
	THROW  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	import_spec  goto 45
	declaration  goto 46
	stmt  goto 47
	function_def  goto 48
	class_def  goto 49
	contract_def  goto 50
	module_def  goto 51
	expr  goto 52
	expr_stmt  goto 53
	var_decl  goto 54
	const_decl  goto 55
	assign_stmt  goto 56
	if_stmt  goto 57
	while_stmt  goto 58
	for_stmt  goto 59
	return_stmt  goto 60
	break_stmt  goto 61
	continue_stmt  goto 62
	try_stmt  goto 63
	throw_stmt  goto 64
	import_stmt  goto 65
	export_stmt  goto 66
	literal  goto 67


state 15
	import_spec : IMPORT IDENTIFIER AS . IDENTIFIER  (7)

	IDENTIFIER  shift 68
	.  error


state 16
	import_spec : IMPORT IDENTIFIER FROM . IDENTIFIER  (8)

	IDENTIFIER  shift 69
	.  error


state 17
	IDENTIFIER_LIST : IDENTIFIER .  (10)

	.  reduce 10


state 18
	import_spec : IMPORT LPAREN IDENTIFIER_LIST . RPAREN FROM IDENTIFIER  (9)
	IDENTIFIER_LIST : IDENTIFIER_LIST . COMMA IDENTIFIER  (11)

	RPAREN  shift 70
	COMMA  shift 71
	.  error


state 19
	program : imports PROGRAM IDENTIFIER BEGIN program_body . END EOF  (1)
	program_body : program_body . declaration  (13)
	program_body : program_body . stmt  (14)

	IDENTIFIER  shift 20
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	END  shift 72
	VAR  shift 25
	CONST  shift 26
	IF  shift 27
	WHILE  shift 28
	FOR  shift 29
	DEFINE  shift 30
	IMPORT  shift 7
	EXPORT  shift 31
	RETURN  shift 32
	BREAK  shift 33
	CONTINUE  shift 34
	TRY  shift 35
	THROW  shift 36
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	import_spec  goto 45
	declaration  goto 46
	stmt  goto 47
	function_def  goto 48
	class_def  goto 49
	contract_def  goto 50
	module_def  goto 51
	expr  goto 52
	expr_stmt  goto 53
	var_decl  goto 54
	const_decl  goto 55
	assign_stmt  goto 56
	if_stmt  goto 57
	while_stmt  goto 58
	for_stmt  goto 59
	return_stmt  goto 60
	break_stmt  goto 61
	continue_stmt  goto 62
	try_stmt  goto 63
	throw_stmt  goto 64
	import_stmt  goto 65
	export_stmt  goto 66
	literal  goto 67


20: shift/reduce conflict (shift 78, reduce 87) on LPAREN
state 20
	assign_stmt : IDENTIFIER . ASSIGN expr terminator  (57)
	assign_stmt : IDENTIFIER . PLUSASSIGN expr terminator  (58)
	assign_stmt : IDENTIFIER . MINUSASSIGN expr terminator  (59)
	assign_stmt : IDENTIFIER . MULTIPLYASSIGN expr terminator  (60)
	assign_stmt : IDENTIFIER . DIVIDEASSIGN expr terminator  (61)
	expr : IDENTIFIER .  (87)
	expr : IDENTIFIER . LPAREN expr_list RPAREN  (105)

	ASSIGN  shift 73
	PLUSASSIGN  shift 74
	MINUSASSIGN  shift 75
	MULTIPLYASSIGN  shift 76
	DIVIDEASSIGN  shift 77
	LPAREN  shift 78
	IDENTIFIER  reduce 87
	INTEGER  reduce 87
	FLOAT  reduce 87
	STRING  reduce 87
	END  reduce 87
	VAR  reduce 87
	CONST  reduce 87
	IF  reduce 87
	ELSE  reduce 87
	ELIF  reduce 87
	WHILE  reduce 87
	FOR  reduce 87
	DEFINE  reduce 87
	IMPORT  reduce 87
	EXPORT  reduce 87
	RETURN  reduce 87
	BREAK  reduce 87
	CONTINUE  reduce 87
	TRY  reduce 87
	CATCH  reduce 87
	FINALLY  reduce 87
	THROW  reduce 87
	TRUE  reduce 87
	FALSE  reduce 87
	NULL  reduce 87
	AND  reduce 87
	OR  reduce 87
	NOT  reduce 87
	PLUS  reduce 87
	MINUS  reduce 87
	MULTIPLY  reduce 87
	DIVIDE  reduce 87
	MODULO  reduce 87
	POWER  reduce 87
	EQUAL  reduce 87
	NOTEQUAL  reduce 87
	LESS  reduce 87
	GREATER  reduce 87
	LESSEQUAL  reduce 87
	GREATEREQUAL  reduce 87
	LBRACE  reduce 87
	LBRACKET  reduce 87
	SEMICOLON  reduce 87
	DOT  reduce 87


state 21
	literal : INTEGER .  (119)

	.  reduce 119


state 22
	literal : FLOAT .  (120)

	.  reduce 120


state 23
	literal : STRING .  (121)

	.  reduce 121


state 24
	program : imports MODULE IDENTIFIER program_body END . MODULE EOF  (2)
	program : imports MODULE IDENTIFIER program_body END . EOF  (3)

	MODULE  shift 79
	EOF  shift 80
	.  error


state 25
	var_decl : VAR . IDENTIFIER COLON type_expr ASSIGN expr terminator  (51)
	var_decl : VAR . IDENTIFIER COLON type_expr terminator  (52)
	var_decl : VAR . IDENTIFIER ASSIGN expr terminator  (53)
	var_decl : VAR . IDENTIFIER terminator  (54)

	IDENTIFIER  shift 81
	.  error


state 26
	const_decl : CONST . IDENTIFIER COLON type_expr ASSIGN expr terminator  (55)
	const_decl : CONST . IDENTIFIER ASSIGN expr terminator  (56)

	IDENTIFIER  shift 82
	.  error


state 27
	if_stmt : IF . expr THEN stmt_list END IF  (62)
	if_stmt : IF . expr THEN stmt_list ELSE stmt_list END IF  (63)
	if_stmt : IF . expr THEN stmt_list elif_list END IF  (64)
	expr : IF . expr THEN expr ELSE expr  (111)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	expr  goto 85
	literal  goto 67


state 28
	while_stmt : WHILE . expr DO stmt_list END WHILE  (68)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	expr  goto 86
	literal  goto 67


state 29
	for_stmt : FOR . EACH IDENTIFIER IN expr DO stmt_list END FOR  (69)
	for_stmt : FOR . IDENTIFIER IN expr DO stmt_list END FOR  (70)

	IDENTIFIER  shift 87
	EACH  shift 88
	.  error


state 30
	function_def : DEFINE . FUNCTION IDENTIFIER LPAREN params RPAREN return_type BEGIN stmt_list END  (19)
	function_def : DEFINE . ASYNC FUNCTION IDENTIFIER LPAREN params RPAREN return_type BEGIN stmt_list END  (20)
	class_def : DEFINE . CLASS IDENTIFIER BEGIN class_body END  (139)
	class_def : DEFINE . CLASS IDENTIFIER EXTENDS IDENTIFIER BEGIN class_body END  (140)
	contract_def : DEFINE . CONTRACT IDENTIFIER BEGIN contract_body END  (147)
	module_def : DEFINE . MODULE IDENTIFIER BEGIN module_body END  (152)

	FUNCTION  shift 89
	CLASS  shift 90
	CONTRACT  shift 91
	MODULE  shift 92
	ASYNC  shift 93
	.  error


state 31
	export_stmt : EXPORT . IDENTIFIER terminator  (83)
	export_stmt : EXPORT . FUNCTION IDENTIFIER terminator  (84)
	export_stmt : EXPORT . ALL terminator  (85)

	IDENTIFIER  shift 94
	FUNCTION  shift 95
	ALL  shift 96
	.  error


32: shift/reduce conflict (shift 83, reduce 49) on IDENTIFIER
32: shift/reduce conflict (shift 21, reduce 49) on INTEGER
32: shift/reduce conflict (shift 22, reduce 49) on FLOAT
32: shift/reduce conflict (shift 23, reduce 49) on STRING
32: shift/reduce conflict (shift 84, reduce 49) on IF
32: shift/reduce conflict (shift 37, reduce 49) on TRUE
32: shift/reduce conflict (shift 38, reduce 49) on FALSE
32: shift/reduce conflict (shift 39, reduce 49) on NULL
32: shift/reduce conflict (shift 40, reduce 49) on NOT
32: shift/reduce conflict (shift 41, reduce 49) on MINUS
32: shift/reduce conflict (shift 42, reduce 49) on LPAREN
32: shift/reduce conflict (shift 43, reduce 49) on LBRACE
32: shift/reduce conflict (shift 44, reduce 49) on LBRACKET
state 32
	return_stmt : RETURN . expr terminator  (71)
	return_stmt : RETURN . terminator  (72)
	terminator : .  (49)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	SEMICOLON  shift 97
	END  reduce 49
	VAR  reduce 49
	CONST  reduce 49
	ELSE  reduce 49
	ELIF  reduce 49
	WHILE  reduce 49
	FOR  reduce 49
	DEFINE  reduce 49
	IMPORT  reduce 49
	EXPORT  reduce 49
	RETURN  reduce 49
	BREAK  reduce 49
	CONTINUE  reduce 49
	TRY  reduce 49
	CATCH  reduce 49
	FINALLY  reduce 49
	THROW  reduce 49

	expr  goto 98
	terminator  goto 99
	literal  goto 67


state 33
	break_stmt : BREAK . terminator  (73)
	terminator : .  (49)

	SEMICOLON  shift 97
	IDENTIFIER  reduce 49
	INTEGER  reduce 49
	FLOAT  reduce 49
	STRING  reduce 49
	END  reduce 49
	VAR  reduce 49
	CONST  reduce 49
	IF  reduce 49
	ELSE  reduce 49
	ELIF  reduce 49
	WHILE  reduce 49
	FOR  reduce 49
	DEFINE  reduce 49
	IMPORT  reduce 49
	EXPORT  reduce 49
	RETURN  reduce 49
	BREAK  reduce 49
	CONTINUE  reduce 49
	TRY  reduce 49
	CATCH  reduce 49
	FINALLY  reduce 49
	THROW  reduce 49
	TRUE  reduce 49
	FALSE  reduce 49
	NULL  reduce 49
	NOT  reduce 49
	MINUS  reduce 49
	LPAREN  reduce 49
	LBRACE  reduce 49
	LBRACKET  reduce 49

	terminator  goto 100


state 34
	continue_stmt : CONTINUE . terminator  (74)
	terminator : .  (49)

	SEMICOLON  shift 97
	IDENTIFIER  reduce 49
	INTEGER  reduce 49
	FLOAT  reduce 49
	STRING  reduce 49
	END  reduce 49
	VAR  reduce 49
	CONST  reduce 49
	IF  reduce 49
	ELSE  reduce 49
	ELIF  reduce 49
	WHILE  reduce 49
	FOR  reduce 49
	DEFINE  reduce 49
	IMPORT  reduce 49
	EXPORT  reduce 49
	RETURN  reduce 49
	BREAK  reduce 49
	CONTINUE  reduce 49
	TRY  reduce 49
	CATCH  reduce 49
	FINALLY  reduce 49
	THROW  reduce 49
	TRUE  reduce 49
	FALSE  reduce 49
	NULL  reduce 49
	NOT  reduce 49
	MINUS  reduce 49
	LPAREN  reduce 49
	LBRACE  reduce 49
	LBRACKET  reduce 49

	terminator  goto 101


state 35
	try_stmt : TRY . stmt_list catch_list finally END TRY  (75)
	stmt_list : .  (31)

	.  reduce 31

	stmt_list  goto 102


state 36
	throw_stmt : THROW . expr terminator  (81)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	expr  goto 103
	literal  goto 67


state 37
	literal : TRUE .  (122)

	.  reduce 122


state 38
	literal : FALSE .  (123)

	.  reduce 123


state 39
	literal : NULL .  (124)

	.  reduce 124


state 40
	expr : NOT . expr  (102)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	expr  goto 104
	literal  goto 67


state 41
	expr : MINUS . expr  (103)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	.  error

	expr  goto 105
	literal  goto 67


state 42
	expr : LPAREN . expr RPAREN  (104)
	expr : LPAREN . expr_list RPAREN  (110)
	expr_list : .  (112)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	RPAREN  reduce 112
	COMMA  reduce 112

	expr  goto 106
	literal  goto 67
	expr_list  goto 107


state 43
	expr : LBRACE . map_list RBRACE  (109)
	map_list : .  (115)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	RBRACE  reduce 115
	COMMA  reduce 115

	expr  goto 108
	literal  goto 67
	map_list  goto 109
	map_pair  goto 110


state 44
	expr : LBRACKET . expr_list RBRACKET  (108)
	expr_list : .  (112)

	IDENTIFIER  shift 83
	INTEGER  shift 21
	FLOAT  shift 22
	STRING  shift 23
	IF  shift 84
	TRUE  shift 37
	FALSE  shift 38
	NULL  shift 39
	NOT  shift 40
	MINUS  shift 41
	LPAREN  shift 42
	LBRACE  shift 43
	LBRACKET  shift 44
	RBRACKET  reduce 112
	COMMA  reduce 112

	expr  goto 111
	literal  goto 67
	expr_list  goto 112


state 45
	import_stmt : import_spec .  (82)

	.  reduce 82


state 46
	program_body : program_body declaration .  (13)

	.  reduce 13


state 47
	program_body : program_body stmt .  (14)

	.  reduce 14


48: reduce/reduce conflict (reduce 15, reduce 40) on IDENTIFIER
48: reduce/reduce conflict (reduce 15, reduce 40) on INTEGER
48: reduce/reduce conflict (reduce 15, reduce 40) on FLOAT
48: reduce/reduce conflict (reduce 15, reduce 40) on STRING
48: reduce/reduce conflict (reduce 15, reduce 40) on END
48: reduce/reduce conflict (reduce 15, reduce 40) on VAR
48: reduce/reduce conflict (reduce 15, reduce 40) on CONST
48: reduce/reduce conflict (reduce 15, reduce 40) on IF
48: reduce/reduce conflict (reduce 15, reduce 40) on WHILE
48: reduce/reduce conflict (reduce 15, reduce 40) on FOR
48: reduce/reduce conflict (reduce 15, reduce 40) on DEFINE
48: reduce/reduce conflict (reduce 15, reduce 40) on IMPORT
48: reduce/reduce conflict (reduce 15, reduce 40) on EXPORT
48: reduce/reduce conflict (reduce 15, reduce 40) on RETURN
48: reduce/reduce conflict (reduce 15, reduce 40) on BREAK
48: reduce/reduce conflict (reduce 15, reduce 40) on CONTINUE
48: reduce/reduce conflict (reduce 15, reduce 40) on TRY
48: reduce/reduce conflict (reduce 15, reduce 40) on THROW
48: reduce/reduce conflict (reduce 15, reduce 40) on TRUE
48: reduce/reduce conflict (reduce 15, reduce 40) on FALSE
48: reduce/reduce conflict (reduce 15, reduce 40) on NULL
48: reduce/reduce conflict (reduce 15, reduce 40) on NOT
48: reduce/reduce conflict (reduce 15, reduce 40) on MINUS
48: reduce/reduce conflict (reduce 15, reduce 40) on LPAREN
48: reduce/reduce conflict (reduce 15, reduce 40) on LBRACE
48: reduce/reduce conflict (reduce 15, reduce 40) on LBRACKET
state 48
	declaration : function_def .  (15)
	stmt : function_def .  (40)

	.  reduce 15


state 49
	declaration : class_def .  (16)

	.  reduce 16


state 50
	declaration : contract_def .  (17)

	.  reduce 17


state 51
	declaration : module_def .  (18)

	.  reduce 18


52: shift/reduce conflict (shift 116, reduce 49) on MINUS
52: shift/reduce conflict (shift 127, reduce 49) on LBRACKET
state 52
	expr_stmt : expr . terminator  (50)
	expr : expr . PLUS expr  (88)
	expr : expr . MINUS expr  (89)
	expr : expr . MULTIPLY expr  (90)
	expr : expr . DIVIDE expr  (91)
	expr : expr . MODULO expr  (92)
	expr : expr . POWER expr  (93)
	expr : expr . EQUAL expr  (94)
	expr : expr . NOTEQUAL expr  (95)
	expr : expr . LESS expr  (96)
	expr : expr . GREATER expr  (97)
	expr : expr . LESSEQUAL expr  (98)
	expr : expr . GREATEREQUAL expr  (99)
	expr : expr . AND expr  (100)
	expr : expr . OR expr  (101)
	expr : expr . DOT IDENTIFIER  (106)
	expr : expr . LBRACKET expr RBRACKET  (107)
	terminator : .  (49)

	AND  shift 113
	OR  shift 114
	PLUS  shift 115
	MINUS  shift 116
	MULTIPLY  shift 117
	DIVIDE  shift 118
	MODULO  shift 119
	POWER  shift 120
	EQUAL  shift 121
	NOTEQUAL  shift 122
	LESS  shift 123
	GREATER  shift 124
	LESSEQUAL  shift 125
	GREATEREQUAL  shift 126
	LBRACKET  shift 127
	SEMICOLON  shift 97
	DOT  shift 128
	IDENTIFIER  reduce 49
	INTEGER  reduce 49
	FLOAT  reduce 49
	STRING  reduce 49
	END  reduce 49
	VAR  reduce 49
	CONST  reduce 49
	IF  reduce 49
	ELSE  reduce 49
	ELIF  reduce 49
	WHILE  reduce 49
	FOR  reduce 49
	DEFINE  reduce 49
	IMPORT  reduce 49
	EXPORT  reduce 49
	RETURN  reduce 49
	BREAK  reduce 49
	CONTINUE  reduce 49
	TRY  reduce 49
	CATCH  reduce 49
	FINALLY  reduce 49
	THROW  reduce 49
	TRUE  reduce 49
	FALSE  reduce 49
	NULL  reduce 49
	NOT  reduce 49
	LPAREN  reduce 49
	LBRACE  reduce 49

	terminator  goto 129


state 53
	stmt : expr_stmt .  (33)

	.  reduce 33


state 54
	stmt : var_decl .  (34)

	.  reduce 34


state 55
	stmt : const_decl .  (35)

	.  reduce 35


state 56
	stmt : assign_stmt .  (36)

	.  reduce 36


state 57
	stmt : if_stmt .  (37)

	.  reduce 37


state 58
	stmt : while_stmt .  (38)

	.  reduce 38


state 59
	stmt : for_stmt .  (39)

	.  reduce 39


state 60
	stmt : return_stmt .  (41)

	.  reduce 41


state 61
	stmt : break_stmt .  (42)

	.  reduce 42


state 62
	stmt : continue_stmt .  (43)

	.  reduce 43


state 63
	stmt : try_stmt .  (44)

	.  reduce 44


state 64
	stmt : throw_stmt .  (45)

	.  reduce 45


state 65
	stmt : import_stmt .  (46)

	.  reduce 46


state 66
	stmt : export_stmt .  (47)

	.  reduce 47


state 67
	expr : literal .  (86)

	.  reduce 86


state 68
	import_spec : IMPORT IDENTIFIER AS IDENTIFIER .  (7)

	.  reduce 7


state 69
	import_spec : IMPORT IDENTIFIER FROM IDENTIFIER .  (8)

	.  reduce 8


state 70
	import_spec : IMPORT LPAREN IDENTIFIER_LIST RPAREN . FROM IDENTIFIER  (9)

	FROM  shift 130
	.  error

